:city_sunrise: Replace email with Instagram

--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ author:
   facebook_username: vplata
   github_username:  xnt
   linkedin_username:  vrplata
+  instagram_username: xnt87
 
 defaults:
   -
