:briefcase: Add link to resume
Also ignore DS_Store, change description

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Vicente Plata
-description: 'Welcome'
+description: 'Hi there!'
 url: 'http://xnt.github.io'
 baseurl: ''
 google_analytics: 'UA-48212133-2'
