:key: Add Keybase link
Add logic to render the keybase link
Setup Font Awesome
Change Instagram to Font Awesome
Remove RSS

--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ author:
   facebook_username: vplata
   github_username:  xnt
   instagram_username: xnt87
+  keybase_username: vplata
   linkedin_username:  vrplata
   twitter_username: xnt
   speakerdeck: xnt
