:see_no_evil: Update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
-_site/
-.sass-cache/
-**.DS_Store
+# Project dependencies
+.cache
+node_modules
+yarn-error.log
+package-lock.json
+yarn.lock
+
+# Build directory
+/public
+.DS_Store
