--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ package-lock.json
 yarn.lock
 
 # Build directory
-/public
+#/public
 .DS_Store# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
