--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@fortawesome/free-brands-svg-icons": "^5.8.2",
     "@fortawesome/free-solid-svg-icons": "^5.8.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "bootstrap": "^4.4.1",
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.8.6",
     "react-live-clock": "^3.1.0",
     "react-router-dom": "^5.1.2",
