--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.14.0",
     "react-live-clock": "^3.1.0",
+    "react-parallax": "^3.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.4"
   },
