--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-live-clock": "^3.1.0",
     "react-parallax": "^3.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.4"
+    "react-scripts": "^3.4.4",
+    "typescript": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
